--- a/MVC.Chapter2/MVC.Chapter2/Views/Home/Index.cshtml
+++ b/MVC.Chapter2/MVC.Chapter2/Views/Home/Index.cshtml
@@ -12,7 +12,11 @@
 </head>
 <body>
     <div> 
-       Hello World (FRom the view)
+       @ViewBag.Greeting World (From the view)
+       <p>We're going to have an exciting party.<br />
+       (To do: sell it better. Add pictures or something.)
+       </p> 
+       @Html.ActionLink("RSVP Now", "RsvpForm")
     </div>
 </body>
 </html>
