--- a/MVC.Chapter2/MVC.Chapter2/Views/Home/RsvpForm.cshtml
+++ b/MVC.Chapter2/MVC.Chapter2/Views/Home/RsvpForm.cshtml
@@ -14,6 +14,7 @@
 <body>
    @using (Html.BeginForm())
    {
+        
          <p>Your name: @Html.TextBoxFor(x => x.Name) </p>
          <p>Your email: @Html.TextBoxFor(x => x.Email)</p>        
          <p>Your phone: @Html.TextBoxFor(x => x.Phone)</p>        
@@ -33,7 +34,8 @@
                   }
               }
               , "Choose an option")
-            </p>        
+            </p>
+            @Html.ValidationSummary()
             <input type="submit" value="Submit RSVP" />
    }
 </body>
