--- a/PizzaStoreMVC/PizzaStoreMVC/Views/Home/Index.cshtml
+++ b/PizzaStoreMVC/PizzaStoreMVC/Views/Home/Index.cshtml
@@ -1,22 +1,20 @@
 ﻿
-@model PizzaStoreMVC.ViewModels.PizzaOrderOptions
+@model PizzaStoreMVC.ViewModels.PizzaOrder
 
-@Html.DropDownListFor(m => m.sauces, Model.sauces)
-@Html.DropDownListFor(m => m.crust, Model.crust)
+@using (Html.BeginForm())
+{
+@Html.LabelFor(m => m.Option.sauces)
+@Html.DropDownListFor(m => m.Option.sauces, Model.Option.sauces)
+@Html.ValidationMessageFor(m => m.Option.sauces)
 
-@{ 
-   foreach (var item in Model.cheeses)
-   {
-      Html.CheckBox(item.Text);
-   }
+@Html.LabelFor(m => m.Option.crust)
+@Html.DropDownListFor(m => m.Option.crust, Model.Option.crust)
+@Html.ValidationMessageFor(m => m.Option.crust)
 
+@Html.LabelFor(m => m.Option.sizes)
+@Html.DropDownListFor(m => m.Option.sizes, Model.Option.sizes)
+@Html.ValidationMessageFor(m => m.Option.sizes)
+
+<button type="submit">Submit</button>
 }
-
-@Html.DropDownListFor(m => m.sizes, Model.sizes)
-
-@{ 
-   foreach (var item in Model.toppings)
-   {
-      Html.CheckBox(item.Text);
-   }
-}
+@Html.Partial("~/Views/Shared/CartView.cshtml", Model.details)
