--- a/PizzaStoreMVC/PizzaStoreMVC/Views/Shared/_Layout.cshtml
+++ b/PizzaStoreMVC/PizzaStoreMVC/Views/Shared/_Layout.cshtml
@@ -13,6 +13,12 @@
        @RenderBody()@*placeholder - this is where views are injected like a master page*@
     </div>
 
+
+   <script src="~/scripts/jquery-1.8.0.min.js"></script>
+   <script src="~/scripts/jquery.validate.min.js"></script>
+   <script src="~/scripts/jquery.validate.unobtrusive.min.js"></script>
+
+
    @RenderSection("script",false)@*this is where all views inject html by default*@
 </body>
 </html>
