add more pages, can order multiple pizzas, displays order summary with total price. next: add order to db

--- a/PizzaStoreMVC2/PizzaStoreMVC2.Client/Views/PizzaSite/Order.cshtml
+++ b/PizzaStoreMVC2/PizzaStoreMVC2.Client/Views/PizzaSite/Order.cshtml
@@ -14,6 +14,7 @@
       @Html.DropDownListFor(m => m.crustString, Model.CrustOptions, new { @class = "btn btn-default dropdown-toggle" })
       @Html.DropDownListFor(m => m.sizeString, Model.SizeOptions, new { @class = "btn btn-default dropdown-toggle" })
    </div>
+  @* @{ var model=ViewBag.model as PizzaStoreMVC2.Client.ViewModels.PizzaSiteModel}}*@
    <div class="form-group">
       <div btn-group" data-toggle="buttons">
          @{
